swagger fixed for ids
