# docs/swagger.json
@@ -135,6 +135,15 @@
                     "players"
                 ],
                 "summary": "player stats",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "PlayerId",
+                        "name": "playerId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -154,7 +163,7 @@
                 }
             }
         },
-        "/stat/team/{teamId}": {
+        "/stat/teams/{teamId}": {
             "get": {
                 "description": "Get a list of all players",
                 "produces": [
@@ -167,8 +176,8 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Player ID",
-                        "name": "playerId",
+                        "description": "teamId",
+                        "name": "teamId",
                         "in": "path",
                         "required": true
                     }
